--- a/aws_braket_updated.yml
+++ b/aws_braket_updated.yml
@@ -5,6 +5,7 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - abseil-cpp=20211102.0=hd4dd3e8_0
+  - aiobotocore=2.7.0=py312h06a4308_0
   - aiohttp=3.9.3=py312h5eee18b_0
   - aioitertools=0.7.1=pyhd3eb1b0_0
   - aiosignal=1.2.0=pyhd3eb1b0_0
@@ -116,7 +117,6 @@ dependencies:
   - grpc-cpp=1.48.2=he1ff14a_1
   - gst-plugins-base=1.14.1=h6a678d5_1
   - gstreamer=1.14.1=h5eee18b_1
-  - h5py=3.9.0=py312h34c39bb_0
   - hdf5=1.12.1=h2b7332f_3
   - heapdict=1.0.1=pyhd3eb1b0_0
   - holoviews=1.18.3=py312h06a4308_0
@@ -173,7 +173,6 @@ dependencies:
   - kiwisolver=1.4.4=py312h6a678d5_0
   - krb5=1.20.1=h143b758_1
   - lazy-object-proxy=1.6.0=py312h5eee18b_0
-  - lazy_loader=0.3=py312h06a4308_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
   - lerc=3.0=h295c915_0
@@ -183,7 +182,6 @@ dependencies:
   - libbrotlicommon=1.0.9=h5eee18b_7
   - libbrotlidec=1.0.9=h5eee18b_7
   - libbrotlienc=1.0.9=h5eee18b_7
-  - libclang=14.0.6=default_hc6dbbc7_1
   - libclang13=14.0.6=default_he11475f_1
   - libcups=2.4.2=h2d74bed_1
   - libcurl=8.5.0=h251f7ec_0
@@ -291,7 +289,6 @@ dependencies:
   - prompt-toolkit=3.0.43=py312h06a4308_0
   - prompt_toolkit=3.0.43=hd3eb1b0_0
   - protego=0.1.16=py_0
-  - protobuf=3.20.3=py312h6a678d5_0
   - psutil=5.9.0=py312h5eee18b_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
@@ -361,7 +358,6 @@ dependencies:
   - rtree=1.0.1=py312h06a4308_0
   - s2n=1.3.27=hdbd6064_0
   - s3fs=2023.10.0=py312h06a4308_0
-  - scikit-image=0.22.0=py312h526ad5a_0
   - scikit-learn=1.3.0=py312h526ad5a_2
   - scipy=1.11.4=py312hc5e2394_0
   - scrapy=2.11.1=py312h06a4308_0
@@ -449,11 +445,14 @@ dependencies:
   - zope.interface=5.4.0=py312h5eee18b_0
   - zstd=1.5.5=hc292b87_0
   - pip:
+      - absl-py==2.1.0
       - amazon-braket-default-simulator==1.26.0
       - amazon-braket-schemas==1.22.0
       - amazon-braket-sdk==1.84.0
       - annotated-types==0.6.0
       - antlr4-python3-runtime==4.9.2
+      - array-record==0.5.1
+      - astunparse==1.6.3
       - backoff==2.2.1
       - backports-entry-points-selectable==1.3.0
       - boltons==24.0.0
@@ -461,22 +460,42 @@ dependencies:
       - botocore==1.34.101
       - cirq-core==1.3.0
       - debugpy==1.8.1
+      - dm-tree==0.1.8
+      - docstring-parser==0.16
       - duet==0.2.9
+      - etils==1.9.4
+      - flatbuffers==24.3.25
       - fqdn==1.5.1
       - func-timeout==4.3.5
+      - gast==0.6.0
+      - google-pasta==0.2.0
+      - googleapis-common-protos==1.65.0
+      - grpcio==1.66.2
+      - h5py==3.12.1
       - ibm-cloud-sdk-core==3.20.0
       - ibm-platform-services==0.53.6
+      - immutabledict==4.2.0
+      - importlib-resources==6.4.5
       - ipympl==0.9.4
       - ipynb-path==0.1.5
       - isoduration==20.11.0
       - itables==2.0.1
       - jsonpointer==2.4
+      - keras==3.5.0
+      - lazy-loader==0.4
+      - libclang==18.1.1
       - mitiq==0.38.0
+      - ml-dtypes==0.4.1
+      - mlxtend==0.23.1
+      - namex==0.0.8
       - openpulse==0.5.0
       - openqasm3==0.5.0
       - opt-einsum==3.3.0
+      - optree==0.12.1
       - oqpy==0.3.5
       - pbr==6.0.0
+      - promise==2.3
+      - protobuf==4.25.5
       - py==1.11.0
       - pydantic==2.7.1
       - pydantic-core==2.18.2
@@ -485,19 +504,28 @@ dependencies:
       - pylatexenc==2.10
       - pyscf==2.5.0
       - pyspnego==0.10.2
+      - python-dotenv==1.0.1
       - qiskit==1.1.1
       - qiskit-aer==0.14.2
       - qiskit-algorithms==0.3.0
-      - qiskit-braket-provider==0.4.0
+      - qiskit-braket-provider==0.4.1
       - qiskit-ibm-runtime==0.23.0
-      - qiskit-ionq==0.5.0
+      - qiskit-ionq==0.5.8
       - qiskit-nature==0.7.2
       - requests-ntlm==1.2.0
       - retry==0.9.2
       - rustworkx==0.14.2
       - s3transfer==0.10.1
+      - scikit-image==0.24.0
+      - simple-parsing==0.1.6
       - stevedore==5.2.0
       - symengine==0.11.0
+      - tensorboard==2.17.1
+      - tensorboard-data-server==0.7.2
+      - tensorflow==2.17.0
+      - tensorflow-datasets==4.9.6
+      - tensorflow-metadata==1.15.0
+      - termcolor==2.4.0
       - uri-template==1.3.0
       - urllib3==2.2.1
       - webcolors==1.13
